nori-rs/tui/src/bottom_pane/chat_composer/tests/snapshots/nori_tui__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap
---
source: tui/src/bottom_pane/chat_composer/tests/mod.rs
expression: terminal.backend()
---
"                                                                                                    "
"? Ask Nori to do anything                                                                           "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  / for commands                            shift + enter for newline                               "
"  @ for file paths                          ctrl + v to paste images                                "
"  esc again to edit previous message        ctrl + g to open editor                                 "
"  ctrl + c to exit                          ctrl + o to toggle plan drawer                          "
"                                            ctrl + t to view transcript                             "
