nori-rs/tui/src/bottom_pane/chat_composer/tests/snapshots/nori_tui__bottom_pane__chat_composer__tests__shell_mode_bang_prefix.snap
---
source: tui/src/bottom_pane/chat_composer/tests/mod.rs
expression: terminal.backend()
---
"                                                                                                    "
"› !pwd                                                                                              "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
